Update AbstractAnalysisRunner for better readability when scoring genes